--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=tu_usuario
-DB_PASSWORD=tu_contraseña
-DB_NAME=Isaac_Valdez_Contreras_DB
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=product_table
 JWT_SECRET=miSecretoSuperSecreto
 JWT_EXPIRES_IN=1h
