--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=product_table
-JWT_SECRET=mi_clave_secreta
+JWT_SECRET=829Iw92@8%100
 JWT_EXPIRES_IN=1h
